# triad_toolchain

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  Cargo.toml  LICENSE  README.md
conductor/: Cargo.toml
conductor/src/: db.rs  llm.rs  main.rs  verifier.rs
kernel-schema/: Cargo.toml
kernel-schema/src/: lib.rs
mapper/: Cargo.toml
mapper/src/: main.rs
slicer/: Cargo.toml
slicer/src/: main.rs
