[workspace]
members = [
    "kernel-schema",
    "slicer",
    "mapper",
    "conductor",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tree-sitter = "0.20"
tree-sitter-c = "0.20"
petgraph = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.10"
indicatif = "0.17"
