[package]
name = "slicer"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel-schema = { path = "../kernel-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-c = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }
